# Routes/index.js
@@ -18,4 +18,16 @@ router.use('/addresses', addressesRoute);
 router.use('/companies', companiesRoute);
 router.use('/rsvp', rsvpRoute);
 
+router.get('/login', passport.authenticate('github'), (req, res) =>{})
+
+router.get('/logout', function (req, res, next ) {
+    req.logOut(function (err) {
+        if (err) {
+            return next(err);
+        }
+        res.status(200).send('Your logged out')
+    });
+});
+
+
 module.exports = router;
